--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,14 @@ a:hover i {
     color: #087E8B;
 }
 
+/*--- General styles---*/
+
+h4 {
+    color: #087e8b;
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+}
+
 /*--- Header ---*/
 
     /*--- Logo styles --*/
@@ -44,11 +52,16 @@ a:hover i {
     padding-left: 55%;
 }
 
-h4 {
-    color: #087e8b;
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
+/*--- Home ---*/
+
+    /*--- Home Slideshow ---*/
+
+.slide {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
 }
+
 
 /*--- Footer --*/
 
