--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,20 @@ h4 {
     font-size: 22px;
 }
 
+html,body{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*--- Header ---*/
 
     /*--- Logo styles --*/
 
 .logo-size {
     height: 100px;
+    padding-left: 50px
 }
 
     /*--- Navigation styles --*/
@@ -56,17 +64,30 @@ h4 {
 
     /*--- Home Slideshow ---*/
 
-.slide {
-    max-width: 100%;
-    max-height: 100%;
+.image-size{
+    width: 100%;
+    height: auto;
     display: block;
+    position: relative;
+    padding-bottom: 0px;
+    object-fit: contain;
 }
+
+.slider-wrapper {
+    overflow: hidden;
+    width: 90%;
+    box-sizing: border-box;
+  }
+
+  .slider {
+    transform-style: preserve-3d;
+  }
 
 
 /*--- Footer --*/
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 25%;
