Add styles for the content sections of the different locations of the locations on the map page with placeholder text/images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,18 @@ div#map {
 .map-pg-img {
   width: 100%;
 }
+
+.location-bttm-pdding {
+  padding-bottom: 25px;
+}
+
+.into-bttm-pdding {
+  padding-bottom: 100px;
+}
+
+.left-title {
+  padding-left: 70%;
+}
   
 
 /*--- Footer --*/
