--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,6 @@ a:hover {
     text-decoration: none;
 }
 
-a:active {
-    color: #aed19e!important;
-}
-
 .dropdown-background {
     background-color: #FBFFFE;
 }
@@ -204,6 +200,13 @@ html,body{
 
 /*--- Map Page --*/ 
 
+#sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+}
+
 #alert-map-header {
   margin-top: 10%;
 }
@@ -304,6 +307,27 @@ padding: 5%;
 
 .post:not(:last-child){
   margin-bottom: 30px;
+}
+
+/*--- About Page --*/
+
+.postcard-img {
+  float: left;
+  width: auto;
+  height: 65%;
+  padding-right: 3%;
+}
+
+.about-content {
+  padding: 7%;
+}
+
+.ind-hall-img {
+  
+    float: right;
+    width: auto;
+    height: 60%;
+    padding-left: 3%;
 }
   
 
@@ -476,6 +500,11 @@ footer {
     padding-top: 2%;
     padding-left: 40%;
 
+}
+
+.contact-pop.newsletter-pop {
+  width: 35%;
+  margin-top: 25%;
 }
 .readmore-bttm-mobile {
   padding-bottom: 8%;
@@ -759,6 +788,10 @@ footer {
 
 .mobile-news-btn {
   padding-left: 25%;
+}
+
+.contact-pop.newsletter-pop {
+  width: 57%;
 }
 
  }
