--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,6 @@ h3 {
 }
 
 h4 {
-    color: #087e8b;
     font-family: 'Roboto', sans-serif;
     font-size: 22px;
     font-weight: 500;
@@ -440,6 +439,10 @@ footer {
 
   /*--- Footer Styles--*/
 
+  footer {
+    height: 170px;
+  }
+
   .footer-pos{
     padding-top: 3%;
    }
@@ -451,6 +454,10 @@ footer {
   .explore-head {
     padding-left: 5%;
   } 
+
+  .footer-pos.contact-pos {
+    padding-top: 4%;
+  }
 
   .contact-pop {
     width: 50%;
@@ -521,6 +528,10 @@ footer {
   padding-bottom: 4%;
 }
 
+.back-map1 {
+  padding-left: 41%;
+}
+
  }
 
  @media screen and (max-width: 812px) {
@@ -567,6 +578,12 @@ footer {
     width: 85%;
   }
 
+  /*---Header--*/
+
+  .navbar-collapse {
+    padding-right: 35%;
+   }
+
   /*--- Map Page--*/
 
 
@@ -578,6 +595,10 @@ footer {
   .col-reverse {
     flex-direction: column-reverse;
   }
+
+  .back-map1 {
+    padding-left: 40%;
+}
 
  }
 
@@ -688,6 +709,10 @@ footer {
     font-size: 25px;
   }
 
+  h3 {
+    text-align: center;
+  }
+
   h4 {
     font-size: 18px;
    }
@@ -720,6 +745,10 @@ footer {
    footer {
      position: relative;
    }
+
+   .footer-pos.contact-pos {
+    padding-top: 5%;
+}
 
    .explore-mobile {
     padding-left: 15%;
@@ -780,7 +809,9 @@ footer {
   padding: 8%;
 }
 
-
+.back-map1 {
+  padding-left: 30%;
+}
 
 .mobile-news-btn {
   padding-left: 25%;
