--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,12 @@ h4 {
     font-weight: 500;
 }
 
+a.nav-link {
+  font-family: 'Roboto', sans-serif !important;
+  font-size: 22px !important;
+  font-weight: 400 !important;
+}
+
 p {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
